src/ui/snapshots/yap__ui__tests__chat_with_partner.snap
---
source: src/ui/tests.rs
expression: "render(&mut h, 110, 26)"
---
" yap   chat  2 preferences  3 drawer  4 logs  5 traffic  6 settings           ● online · female fox · default "
"──────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" you · default                │  • You have been connected with a yiffing partner.                            "
" gender   Male                │  • Your partner's language is English                                         "
" species  Wolf                │                                                                               "
" role     Switch              │  • Dominant · Female · Fox                                                    "
" language Any / All           │    into Musk, Biting, Tickling                                                "
"                              │                                                                               "
" seeking                      │  partner                                                                      "
" gender   Any / All           │    hey there! got a ref? https://e621.net/posts/123                           "
" species  Any / All           │                                                                               "
" role     Dominant            │  you                                                                          "
" kinks    Any + 2             │    sure, one sec                                                              "
"                              │                                                                               "
" partner                      │  partner is typing…                                                           "
" gender   Female              │                                                                               "
" species  Fox                 │                                                                               "
" role     Dominant            │                                                                               "
" language English             │                                                                               "
" into                         │                                                                               "
" Musk, Biting, Tickling       │                                                                               "
"                              │                                                                               "
"                              │ ╭───────────────────────────────────────────────────────────────────────────╮ "
"                              │ │> say hi…                                                                  │ "
"                              │ ╰───────────────────────────────────────────────────────────────────────────╯ "
"  ^F find · ^D leave · ^B block · ^O links · ^E drawer · ^P profile · pgup scroll · F1 help                   "
