src/ui/snapshots/yap__ui__tests__compact_chat_with_drawer_panel.snap
---
source: src/ui/tests.rs
expression: "render(&mut h, 110, 22)"
---
" yap   chat  2 preferences  3 drawer  4 logs  5 traffic  6 settings           ● online · female fox · default "
"──────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" you · default                │  • You have been connected with a yiffing  │ drawer                           "
" gender   Male                │    partner.                                │ › Ref sheet                      "
" species  Wolf                │  • Your partner's language is English      │   e621.net                       "
" role     Switch              │  • Dominant · Female · Fox                 │                                  "
" language Any / All           │    into Musk, Biting, Tickling             │                                  "
"                              │  partner  hey there! got a ref?            │                                  "
" seeking                      │           https://e621.net/posts/123       │                                  "
" gender   Any / All           │  you      sure, one sec                    │                                  "
" species  Any / All           │                                            │                                  "
" role     Dominant            │  partner is typing…                        │                                  "
" kinks    Any + 2             │                                            │                                  "
"                              │                                            │                                  "
" partner                      │                                            │                                  "
" gender   Female              │                                            │                                  "
" species  Fox                 │                                            │                                  "
" role     Dominant            │                                            │                                  "
" language English             │ ╭────────────────────────────────────────╮ │                                  "
" into                         │ │> say hi…                               │ │                                  "
" Musk, Biting, Tickling       │ ╰────────────────────────────────────────╯ │                                  "
"  enter insert · o open · p preview · y copy · tab back                                                       "
