src/ui/snapshots/yap__ui__tests__history_popup.snap
---
source: src/ui/tests.rs
expression: "render(&mut h, 100, 20)"
---
" yap   chat  2 preferences  3 drawer  4 logs  5 traffic  6 settings             ○ offline · default "
"──╭ history · ↑/↓ scroll · x forget ─────────────────────────────────────────────────────────────╮──"
" y│ patterns                                                                                     │  "
" g│ overall           met 2 · average chat 7m · auto-skipped 1                                   │  "
" s│ how chats ended   you left 1 · they left 1                                                   │  "
" r│ most met          Fox (1, avg 14m) · Wolf (1, avg 1m)                                        │  "
" l│ by shared kinks   none: avg 1m (1) · 3+: avg 14m (1)                                         │  "
"  │ auto-skips for    a different language 1                                                     │  "
" s│                                                                                              │  "
" g│ everyone, newest first                                                                       │  "
" s│ 11-15 09:13  Dominant Female Cat                                skipped: language            │  "
" r│ 11-15 09:13  Dominant Female Wolf                  1m    1↑ 0↓  you left                     │  "
" k│ 11-15 09:13  Dominant Female Fox                  14m  12↑ 15↓  they left                    │  "
"  │                                                                                              │  "
" p│                                                                                              │  "
" n│                                                                                              │  "
"  │                                                                                              │╮ "
"  │                                                                                              ││ "
"  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯╯ "
"  esc cancel                                                                                        "
