src/ui/snapshots/yap__ui__tests__image_viewer_loaded.snap
---
source: src/ui/tests.rs
expression: "render(&mut h, 90, 24)"
---
" yap   chat  2 preferences  3 drawer  4 logs  5 traffic  6 settings    ● online · default "
"──╭ 1 / 2 · from partner · 09:13 ───────────────────────────────────────── i.imgur.com ╮──"
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                   ›│  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │╮ "
"  │                                                                                    ││ "
"  │                                                                                    │╯ "
"  │                                                                                    │  "
" ╭│                               ref.img · 40×20 · 2 KB                               │  "
" ││    → next   o open   y copy link   s save to drawer   d save image   esc close     │  "
" ╰╰────────────────────────────────────────────────────────────────────────────────────╯  "
"  ←/→ other images · o open · y copy · s save · esc close                                 "
