src/ui/snapshots/yap__ui__tests__image_viewer_untrusted.snap
---
source: src/ui/tests.rs
expression: "render(&mut h, 90, 24)"
---
" yap   chat  2 preferences  3 drawer  4 logs  5 traffic  6 settings    ● online · default "
"──╭ 2 / 2 · from partner · 09:13 ───────────────────────────────────────── random.host ╮──"
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                       random.host isn't a trusted image host                       │  "
"  │‹                      Loading it shows them your IP address.                       │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │  "
"  │                                                                                    │╮ "
"  │                                                                                    ││ "
"  │                                                                                    │╯ "
"  │                                                                                    │  "
" ╭│                              https://random.host/b.jpg                             │  "
" ││     ← prev   enter load once   t trust host   o open   y copy link   esc close     │  "
" ╰╰────────────────────────────────────────────────────────────────────────────────────╯  "
"  ←/→ other images · o open · y copy · s save · esc close                                 "
