src/ui/snapshots/yap__ui__tests__kinks_popup.snap
---
source: src/ui/tests.rs
expression: "render(&mut h, 90, 20)"
---
" yap   chat  2 preferences  3 drawer  4 logs  5 traffic  6 settings    ● online · default "
"─────╭ kinks · ↑/↓ scroll ──────────────────────────────────────────────────────────╮─────"
"  • Y│ shared · 2                                                                   │     "
"  • Y│   Musk  Strong body scent as an attraction.                                  │     "
"     │   Biting  Biting and nibbling during sex.                                    │     "
"  • D│                                                                              │     "
"    i│ theirs only · 1                                                              │     "
"     │   Tickling  Tickling a partner.                                              │     "
"  par│                                                                              │     "
"    h│                                                                              │     "
"     │                                                                              │     "
"  you│                                                                              │     "
"    s│                                                                              │───╮ "
"     │                                                                              │d! │ "
"  par│                                                                              │───╯ "
"     │                                                                              │     "
" ╭───│                                                                              │\    "
" │> s│                                                                              │ )   "
" ╰───╰──────────────────────────────────────────────────────────────────────────────╯/    "
"  esc cancel                                                                              "
