src/ui/snapshots/yap__ui__tests__logs_screen.snap
---
source: src/ui/tests.rs
expression: "render(&mut h, 110, 22)"
---
" yap   1 chat  2 preferences  3 drawer  logs  5 traffic  6 settings            ● online · 42 online · default "
"──────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" chats · 1                                │ dominant female fox · 2023-11-15 09:13                            "
" session only · saving off                │ • You have been connected with a yiffing partner.                 "
"                                          │ • Your partner's language is English                              "
"   Dominant Female Fox                    │                                                                   "
"   Nov 15 09:13  2 msgs · 12m             │ • Dominant · Female · Fox                                         "
"                                          │   into Musk, Biting, Tickling                                     "
"                                          │                                                                   "
"                                          │ partner                                                           "
"                                          │   hey there! got a ref? https://e621.net/posts/123                "
"                                          │                                                                   "
"                                          │ you                                                               "
"                                          │   sure, one sec                                                   "
"                                          │                                                                   "
"                                          │ • Your yiffing partner has left.                                  "
"                                          │                                                                   "
"                                          │                                                                   "
"                                          │                                                                   "
"                                          │                                                                   "
"                                          │                                                                   "
"  ↑↓ pgup pgdn scroll · g/G top/bottom · esc back                                                             "
