src/ui/snapshots/yap__ui__tests__messages_layout.snap
---
source: src/ui/tests.rs
expression: "render(&mut h, 100, 26)"
---
" yap   chat  2 preferences  3 drawer  4 logs  5 traffic  6 settings              ● online · default "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
" you · default                │           You have been connected with a yiffing partner.           "
" gender   Male                │                 Your partner's language is English                  "
" species  Wolf                │                                                                     "
" role     Switch              │                       Dominant · Female · Fox                       "
" language Any / All           │                     into Musk, Biting, Tickling                     "
"                              │                                                                     "
" seeking                      │  partner                                                            "
" gender   Any / All           │   hey there! got a ref? https://e621.net/posts/123                  "
" species  Any / All           │                                                                     "
" role     Dominant            │                                                                you  "
" kinks    Any + 2             │                                                     sure, one sec   "
"                              │                                                                     "
" partner                      │  partner                                                            "
" gender   Female              │   a longer reply that should wrap inside its                        "
" species  Fox                 │   bubble on the left side                                           "
" role     Dominant            │                                                                     "
" language English             │                                                                     "
" into · 2 shared              │                                                                     "
" Musk, Biting, Tickling       │                                                                     "
" alt+k explains               │                                                                     "
"                              │ ╭─────────────────────────────────────────────────────────────────╮ "
" together 0s                  │ │> say hi…                                                        │ "
" words    them 10 · you 3     │ ╰─────────────────────────────────────────────────────────────────╯ "
"  ^F find · ^N next · ^D leave · ^B block · ^O links · ^E drawer · ^G snippets · ^X editor · F1 help"
