src/ui/snapshots/yap__ui__tests__settings_screen.snap
---
source: src/ui/tests.rs
expression: "render(&mut h, 90, 20)"
---
" yap   1 chat  2 preferences  3 drawer  4 logs  5 traffic  settings             ○ offline "
"──────────────────────────────────────────────────────────────────────────────────────────"
" settings                                                                                 "
"                                                                                          "
"   appearance                                                                             "
" ›   Theme                                                                       ‹ dark › "
"     Transparent background                                                           off "
"     Chat layout                                                                 ‹ cozy › "
"     Timestamps                                                                       off "
"     Partner sidebar                                                                   on "
"                                                                                          "
"   chats                                                                                  "
"     Fresh chat view for each partner                                                 off "
"     Save chat logs to disk                                                           off "
"     Confirm leave / block / re-roll                                                   on "
"                                                                                          "
"                                                                                          "
"   saved to /home/you/.config/yap/config.toml                                             "
"                                                                                          "
"  enter toggle/edit · ←/→ change · d remove domain                                        "
