src/ui/snapshots/yap__ui__tests__split_view.snap
---
source: src/ui/tests.rs
expression: "render(&mut h, 120, 20)"
---
" yap   chat  2 preferences  3 drawer  4 logs  5 traffic  6 settings                  ● connecting · 42 online · default "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"  1 female fox │ 2 connecting │ + new (alt+n)                                                                           "
"                                                                                                                        "
" chat 2 · connecting                                        │ chat 1 · female fox · alt+o to type here                  "
"                                                            │                                                           "
"  yap                                                       │  • Dominant · Female · Fox                                "
"  YiffSpot in your terminal                                 │    into Musk, Biting, Tickling                            "
"                                                            │                                                           "
"  You must be 18 or older to use YiffSpot.                  │  partner                                                  "
"                                                            │    hey there! got a ref? https://e621.net/posts/123       "
"  Chat one-on-one with a random partner matched on the      │                                                           "
"  preferences you pick. You stay anonymous unless you       │  you                                                      "
"  decide otherwise.                                         │    sure, one sec                                          "
"                                                            │                                                           "
"  › profile default is ready. Press ^F to find a partner    │  partner is typing...                                     "
" ╭────────────────────────────────────────────────────────╮ │ ╭───────────────────────────────────────────────────────╮ "
" │> type a message, or / for commands                     │ │ │> …                                                    │ "
" ╰────────────────────────────────────────────────────────╯ │ ╰───────────────────────────────────────────────────────╯ "
"  ^F find · ^N next · ^D leave · ^B block · ^O links · ^E drawer · ^G snippets · ^X editor · F1 help                    "
